# QuakeSdlGles1

./: CMakeLists.txt  QSdlGles.kdev4  README.md
engsrc/: cl_main.c  cl_parse.c  common.c  gl_draw.c  gl_model.c  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_vidlinuxglx.c  gl_vidsdl.c  gl_vidsdl.c_bak  gl_warp.c  glquake.h  host.c  host_cmd.c  mathlib.c  mathlib.h  menu.c  net.h  net_dgrm.c  net_main.c  net_udp.c  pr_cmds.c  pr_edict.c  pr_exec.c  progs.h  quakedef.h  r_part.c  sbar.c  scratch  snd_dma.c  snd_mix.c  snd_sdl.c  sv_main.c  sv_phys.c  sv_user.c  sys_android.c  sys_linux.c  view.c  (+2 more)
exectestdir/: test.sh  test_debug.sh
exectestdir/id1/gfx/env/skybox/: .directory  skybk.tga  skydn.tga  skylf.tga  skyup.tga
exectestdir/id1/gfx/env/skybox/DarkStormy/: .directory  skybk.tga  skydn.tga  skyft.tga  skylf.tga  skyrt.tga  skyup.tga
exectestdir/id1/gfx/env/skybox/TropicalSunnyDay/: skydn.tga  skyft.tga  skyrt.tga
exectestdir/id1/gfx/env/skybox/fullmoon/: skybk.tga  skydn.tga  skyft.tga  skylf.tga  skyrt.tga  skyup.tga
exectestdir/id1/gfx/env/skybox/numbers/: skybk.tga  skydn.tga  skyft.tga  skylf.tga  skyrt.tga  skyup.tga
extlib/: CMakeLists.txt
extlib/android-ifaddrs/: ifaddrs.c
toolsrc/: .directory  CMakeLists.txt  README
toolsrc/qutils-linux/: .directory  CMakeLists.txt  README.linux
toolsrc/qutils-linux/bspinfo/: CMakeLists.txt  Makefile
toolsrc/qutils-linux/common/: Makefile  bspfile.h  cmdlib.c  cmdlib.h
toolsrc/qutils-linux/light/: CMakeLists.txt  Makefile
toolsrc/qutils-linux/modelgen/: CMakeLists.txt  Makefile
toolsrc/qutils-linux/qbsp/: CMakeLists.txt  Makefile  writebsp.c
toolsrc/qutils-linux/qbsp/.kdev4/: qbsp.kdev4
toolsrc/qutils-linux/qcc/: CMakeLists.txt  Makefile  pr_comp.c  qcc.c  qcc.h
toolsrc/qutils-linux/qfiles/: CMakeLists.txt  Makefile
toolsrc/qutils-linux/qlumpy/: CMakeLists.txt  Makefile  qlumpy
toolsrc/qutils-linux/sprgen/: CMakeLists.txt  Makefile
toolsrc/qutils-linux/texmake/: CMakeLists.txt  Makefile
toolsrc/qutils-linux/vis/: CMakeLists.txt  Makefile  vis.c
