add_definitions(
    #-DBUILD_SHARED_LIBS=ON 
    #-DGLFW_BUILD_EXAMPLES=OFF 
    #-DGLFW_BUILD_TESTS=OFF
)
#set(BUILD_SHARED_LIBS ON CACHE BOOL "Build shared libs")
#set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "Build examples")
#set(GLFW_BUILD_TESTS OFF CACHE BOOL "Build tests")
#add_subdirectory (glfw-3.2.1)
add_subdirectory (qutils-linux)